--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,7 @@
-# Config file for automatic testing at travis-ci.org
-
+sudo: false
 language: python
+python: '3.5'
 
-python:
-  - "3.4"
-  - "3.3"
-  - "2.7"
-  - "2.6"
-  - "pypy"
+install: pip install tox
 
-# command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -r requirements.txt
-
-# command to run tests, e.g. python setup.py test
-script: nosetests
+script: tox
