--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,6 @@
 [tox]
-envlist = py26, py27, py33, py34, py35, pypy, pypy3
+envlist = py{26,27,34,35}, pypy, pypy3
 
 [testenv]
 commands = nosetests {posargs}
-deps =
-    -r{toxinidir}/requirements.txt
+deps = -r{toxinidir}/requirements.txt
