--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,17 @@
 [tox]
-envlist = py{26,27,34,35}, pypy, pypy3
+envlist =
+    py{26,27,34,35}, pypy, pypy3,
+    py{27,35}-codestyle
 
 [testenv]
+setenv =
+    PYTHONDONTWRITEBYTECODE=1
+install_command = pip install --no-deps {opts} {packages}
 commands = nosetests {posargs}
 deps = -r{toxinidir}/requirements.txt
+
+[testenv:py27-codestyle]
+commands = multilint
+
+[testenv:py35-codestyle]
+commands = multilint
