--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
-nose
-wheel
+docutils==0.12
+flake8==2.6.0
+isort==4.2.5
+multilint==1.0.0
+nose==1.3.7
+py==1.4.31
+pycodestyle==2.0.0
+pyflakes==1.2.3
+Pygments==2.1.3
+six==1.10.0
