--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,15 @@
 [bdist_wheel]
 universal = 1
+
+[flake8]
+max-line-length = 120
+
+[isort]
+line_length = 120
+multi_line_output = 5
+not_skip = __init__.py
+
+[multilint]
+paths = nose_randomly
+        setup.py
+        tests
