--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,13 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
+configparser==3.5.0       # via flake8
 docutils==0.12
-flake8==2.6.2
+enum34==1.1.6             # via flake8
+flake8==3.0.1
 isort==4.2.5
 mccabe==0.5.0             # via flake8
-multilint==1.0.1
+multilint==1.0.2
 nose==1.3.7
 pycodestyle==2.0.0        # via flake8
 pyflakes==1.2.3           # via flake8
