--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ isort==4.2.5
 mccabe==0.5.2             # via flake8
 multilint==2.0.1
 nose==1.3.7
+numpy==1.11.2
 pycodestyle==2.0.0        # via flake8
 pyflakes==1.2.3           # via flake8
 Pygments==2.1.3
