Turn the plugin into a single file
This removes the useless `__init__`

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,6 @@ multi_line_output = 5
 not_skip = __init__.py
 
 [tool:multilint]
-paths = nose_randomly
+paths = nose_randomly.py
         setup.py
         tests
