--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,4 @@ nose==1.3.7
 numpy==1.12.1
 pycodestyle==2.3.1        # via flake8
 pyflakes==1.5.0           # via flake8
-Pygments==2.2.0
+pygments==2.2.0
