Upgrade multilint, skip setup.py check on Python 2.7

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,8 @@ commands = nosetests {posargs}
 deps = -r{toxinidir}/requirements.txt
 
 [testenv:py27-codestyle]
-commands = multilint
+# setup.py check broken on travis python 2.7
+commands = multilint --skip setup.py
 
 [testenv:py36-codestyle]
 commands = multilint
