--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,8 @@ configparser==3.5.0       # via flake8
 docutils==0.14
 enum34==1.1.6             # via flake8
 flake8==3.5.0
-isort==4.2.15
+futures==3.1.1
+isort==4.3.3
 mccabe==0.6.1             # via flake8
 multilint==2.2.0
 nose==1.3.7
