--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,9 @@ deps = -r{toxinidir}/requirements.txt
 
 [testenv:py27-codestyle]
 # setup.py check broken on travis python 2.7
+skip_install = true
 commands = multilint --skip setup.py
 
 [testenv:py36-codestyle]
+skip_install = true
 commands = multilint
