--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,10 @@ flake8==3.5.0
 futures==3.1.1
 isort==4.3.4
 mccabe==0.6.1             # via flake8
-multilint==2.2.1
+multilint==2.3.0
 nose==1.3.7
-numpy==1.14.2
+numpy==1.14.3
 pycodestyle==2.3.1        # via flake8
 pyflakes==1.6.0           # via flake8
 pygments==2.2.0
+six==1.11.0               # via multilint
